# youtube-shorts-pipeline

./: CHANGELOG.md  README.md  SKILL.md  gui.py  pyproject.toml  requirements.txt
docs/: index.html
niches/: comedy.yaml  cooking.yaml  education.yaml  entertainment.yaml  fashion.yaml  finance.yaml  fitness.yaml  general.yaml  motivation.yaml  politics.yaml  science.yaml  sports.yaml  travel.yaml  true_crime.yaml
scripts/: setup_youtube_oauth.py
tests/: test_assemble.py  test_captions.py  test_config.py  test_draft.py  test_music.py  test_research.py  test_retry.py  test_state.py  test_topics.py
verticals/: __init__.py  __main__.py  assemble.py  broll.py  captions.py  config.py  draft.py  llm.py  music.py  niche.py  thumbnail.py  tts.py  upload.py  voiceover.py
verticals/topics/: engine.py  newsapi.py  reddit.py  twitter.py
